# leetcode

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml  test.bat  test.sh
.claude/agents/: leetcode-solution-validator.md
.github/workflows/: test.yml
lc_python/: test_15.py  test_17.py  test_22.py  test_238.py  test_345.py  test_48.py  test_6.py
python/: .gitignore  requirements.txt  test_1071.py  test_15.py  test_17.py  test_21.py  test_22.py  test_238.py  test_24.py  test_334.py  test_345.py  test_48.py  test_6.py
rust/: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
rust/lc20/src/: main.rs
rust/src/: lib.rs  permutations.rs  powx_n.rs  remove_duplicates_from_sorted_array.rs  simplify_path.rs  valid_parentheses.rs
